working from bastion, no aws lb

--- a/terraform/k8s/files/coreos_master.yml
+++ b/terraform/k8s/files/coreos_master.yml
@@ -179,7 +179,7 @@ storage:
               - --service-account-key-file=/etc/kubernetes/ssl/apiserver-key.pem
               - --runtime-config=extensions/v1beta1/networkpolicies=true
               - --anonymous-auth=false
-              - --cloud-provider=aws
+              #- --cloud-provider=aws
               livenessProbe:
                 httpGet:
                   host: 127.0.0.1
