--- a/terraform/k8s/files/coreos_master.yml
+++ b/terraform/k8s/files/coreos_master.yml
@@ -48,9 +48,6 @@ storage:
           openssl genrsa -out apiserver-key.pem 2048
           openssl req -new -key apiserver-key.pem -out apiserver.csr -subj "/CN=kube-apiserver/O=system:masters" -config openssl.cnf
           openssl x509 -req -in apiserver.csr -CA ca.pem -CAkey ca-key.pem -CAcreateserial -out apiserver.pem -days 365 -extensions v3_req -extfile openssl.cnf
-          openssl genrsa -out admin-key.pem 2048
-          openssl req -new -key admin-key.pem -out admin.csr -subj "/CN=kube-admin/O=system:masters"
-          openssl x509 -req -in admin.csr -CA ca.pem -CAkey ca-key.pem -CAcreateserial -out admin.pem -days 365
           echo "DONE !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!"
     - filesystem: "root"
       path:       "/etc/kubernetes/ssl/ca.pem"
@@ -115,7 +112,6 @@ storage:
         inline: |
           [Service]
           Environment=KUBELET_IMAGE_TAG=KUBELET_VERSION
-          Environment=KUBELET_EXTRA_ARGS=--cloud-provider=aws
           Environment="RKT_RUN_ARGS=--uuid-file-save=/var/run/kubelet-pod.uuid \
             --volume var-log,kind=host,source=/var/log \
             --mount volume=var-log,target=/var/log \
@@ -139,7 +135,8 @@ storage:
             --pod-manifest-path=/etc/kubernetes/manifests \
             --hostname-override=HOSTNAME \
             --cluster_dns=10.3.0.10 \
-            --cluster_domain=cluster.local
+            --cluster_domain=cluster.local \
+            --cloud-provider=aws
           ExecStop=-/usr/bin/rkt stop --uuid-file=/var/run/kubelet-pod.uuid
           Restart=always
           RestartSec=10
